--- a/docs/_sass/uno.scss
+++ b/docs/_sass/uno.scss
@@ -1367,19 +1367,21 @@ h5 {
 }
 
 h1 {
-	margin-top: 0;
-	font-size: 3.2em;
+	margin-top: 1rem;
+	font-size: 1.618rem;
 	line-height: 1.2em;
 	letter-spacing: .05em;
 	font-weight: 700;
 }
 
 h2 {
-	font-size: 2.2em;
+	font-size: 1rem;
+	color: #ef8200;
 }
 
 h3 {
 	font-size: 1.8em;
+	color: #89a7d6;
 }
 
 h4 {
@@ -1452,7 +1454,7 @@ ul {
 
 code {
 	padding: .1em .4em;
-	background: #e8f2fb;
+	background-color: #e8f2fb;
 	border: 1px solid #c9e1f6;
 	border-radius: 3px;
 	font-family: 'IBM Plex Mono', monospace;
@@ -1461,9 +1463,9 @@ code {
 
 pre {
 	margin-bottom: 1.3em;
-	/* padding: 1em 2.5%;
-	background: #e8f2fb;
-	border: 1px solid #c9e1f6; */
+	padding: 1em 2.5%;
+	background-color: #e8f2fb;
+	border: 1px solid #c9e1f6;
 	border-radius: 3px;
 	font-family: 'IBM Plex Mono', monospace;
 	font-size: .9em;
