--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -25,10 +25,10 @@
 
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
-              <li class="navigation__item"><a href="{{ site.baseurl }}/about" title="link to {{ site.title }} Model" class="blog-button">About</a></li>
-              <li class="navigation__item"><a href="{{ site.baseurl }}/usage" title="link to {{ site.title }} Test" class="blog-button">Usage</a></li>
-              <li class="navigation__item"><a href="{{ site.baseurl }}/testing" title="link to {{ site.title }} Deploy" class="blog-button">Testing</a></li>
-              <li class="navigation__item"><a href="{{ site.baseurl }}/contributing" title="link to {{ site.title }} Usage" class="blog-button">Contributing</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/about" title="link to {{ site.title }} Model" class="blog-button"><i class="fa fa-info-circle" aria-hidden="true"></i> About</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/usage" title="link to {{ site.title }} Test" class="blog-button"><i class="fa fa-cogs" aria-hidden="true"></i> Usage</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/testing" title="link to {{ site.title }} Deploy" class="blog-button"><i class="fas fa-clipboard-check" aria-hidden="true"></i> Testing</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/contributing" title="link to {{ site.title }} Usage" class="blog-button"><i class="far fa-handshake" aria-hidden="true"></i> Contributing</a></li>
             </ul>
           </nav>
         </div>
