--- a/docs/css/main.scss
+++ b/docs/css/main.scss
@@ -6,15 +6,15 @@
 
 /* Modifications */
 
-pre.highlight,
-.highlight pre {
-  padding: 10px;
-}
+// pre.highlight,
+// .highlight pre {
+//   padding: 10px;
+// }
 
-pre.highlight code,
-.highlight pre code {
-  white-space: pre-wrap;
-}
+// pre.highlight code,
+// .highlight pre code {
+//   white-space: pre-wrap;
+// }
 
 .btn,
 .navigation__item a {
