jusify body text

--- a/docs/_sass/uno.scss
+++ b/docs/_sass/uno.scss
@@ -1328,6 +1328,7 @@ body {
 	font-family: 'IBM Plex Sans Serif', sans-serif;
 	font-size: 1.3em;
 	color: #666666;
+	text-align: justify;
 }
 
 ::selection {
