--- a/docs/_sass/uno.scss
+++ b/docs/_sass/uno.scss
@@ -1368,20 +1368,21 @@ h5 {
 }
 
 h1 {
-	margin-top: 1rem;
-	font-size: 1.618rem;
+	margin-top: 2.1em;
+	font-size:  4.236rem;
 	line-height: 1.2em;
 	letter-spacing: .05em;
 	font-weight: 700;
+	color: #4f85c3;
 }
 
 h2 {
-	font-size: 1rem;
-	color: #ef8200;
+	font-size: 2.618rem;
+	color: #7d9fd2;
 }
 
 h3 {
-	font-size: 1.8em;
+	font-size: 1.618rem;
 	color: #89a7d6;
 }
 
@@ -1389,9 +1390,6 @@ h4 {
 	font-size: 1.4em;
 }
 
-h4 {
-	font-size: 1.2em;
-}
 
 h5 {
 	font-size: 1em;
@@ -1455,7 +1453,7 @@ ul {
 
 code {
 	padding: .1em .4em;
-	background-color: #e8f2fb;
+	color: #ef8200;
 	border: 1px solid #c9e1f6;
 	border-radius: 3px;
 	font-family: 'IBM Plex Mono', monospace;
@@ -1465,8 +1463,8 @@ code {
 pre {
 	margin-bottom: 1.3em;
 	padding: 1em 2.5%;
-	background-color: #e8f2fb;
-	border: 1px solid #c9e1f6;
+	color: #c9e1f6;
+	border: 1px solid #ef8200;
 	border-radius: 3px;
 	font-family: 'IBM Plex Mono', monospace;
 	font-size: .9em;
