--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -3,4 +3,4 @@
 </footer>
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/js/main.js?{{site.time | date: '%s%N'}}"></script>
+<script type="text/javascript" src="{{ site.url }}/js/main.js?{{site.time | date: '%s%N'}}"></script>
