--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -12,8 +12,8 @@
 
     <div class="panel-main__content">
       
-        <a href="{{ site.baseurl }}/" title="link to home of {{ site.title }}">
-          <img src="{{ site.baseurl }}/images/profile.png" class="user-image" alt="My Profile Photo">
+        <a href="{{ site.url }}/" title="link to home of {{ site.title }}">
+          <img src="{{ site.url }}/images/profile.png" class="user-image" alt="My Profile Photo">
           <h1 class="panel-cover__title panel-title">{{ site.title }}</h1>
         </a>
         <hr class="panel-cover__divider">
@@ -25,10 +25,10 @@
 
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
-              <li class="navigation__item"><a href="{{ site.baseurl }}/about" title="link to {{ site.title }} Model" class="blog-button"><i class="fa fa-info-circle" aria-hidden="true"></i> About</a></li>
-              <li class="navigation__item"><a href="{{ site.baseurl }}/usage" title="link to {{ site.title }} Test" class="blog-button"><i class="fa fa-cogs" aria-hidden="true"></i> Usage</a></li>
-              <li class="navigation__item"><a href="{{ site.baseurl }}/testing" title="link to {{ site.title }} Deploy" class="blog-button"><i class="fas fa-clipboard-check" aria-hidden="true"></i> Testing</a></li>
-              <li class="navigation__item"><a href="{{ site.baseurl }}/contributing" title="link to {{ site.title }} Usage" class="blog-button"><i class="far fa-handshake" aria-hidden="true"></i> Contributing</a></li>
+              <li class="navigation__item"><a href="{{ site.url }}/about" title="link to {{ site.title }} Model" class="blog-button"><i class="fa fa-info-circle" aria-hidden="true"></i> About</a></li>
+              <li class="navigation__item"><a href="{{ site.url }}/usage" title="link to {{ site.title }} Test" class="blog-button"><i class="fa fa-cogs" aria-hidden="true"></i> Usage</a></li>
+              <li class="navigation__item"><a href="{{ site.url }}/testing" title="link to {{ site.title }} Deploy" class="blog-button"><i class="fas fa-clipboard-check" aria-hidden="true"></i> Testing</a></li>
+              <li class="navigation__item"><a href="{{ site.url }}/contributing" title="link to {{ site.title }} Usage" class="blog-button"><i class="far fa-handshake" aria-hidden="true"></i> Contributing</a></li>
             </ul>
           </nav>
         </div>
