--- a/docs/_includes/social.html
+++ b/docs/_includes/social.html
@@ -53,7 +53,7 @@
 
             <!-- RSS -->
             <li class="navigation__item">
-              <a href="{{ site.baseurl }}/feed.xml" title="Subscribe" target="_blank">
+              <a href="{{ site.url }}/feed.xml" title="Subscribe" target="_blank">
                 <i class="icon icon-rss"></i>
                 <span class="label">RSS</span>
               </a>
