--- a/docs/_layouts/categories.html
+++ b/docs/_layouts/categories.html
@@ -20,7 +20,7 @@ layout: default
         <!-- list only those which contain the current tag --> 
         {% if post.categories contains catitem[0] %} 
             <li>
-              <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+              <a href="{{ post.url | prepend: site.url }}">{{ post.title }}</a>
             </li>
         {% endif %}
       {% endfor %}
