Add forum embedding

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,6 +1,20 @@
+<script type="text/javascript">
+  DiscourseEmbed = { discourseUrl: 'https://community.egi.eu/',
+                     discourseEmbedUrl: '{{ site.url}}/{{page.url}}' };
+
+  (function() {
+    var d = document.createElement('script'); d.type = 'text/javascript'; d.async = true;
+    d.src = DiscourseEmbed.discourseUrl + 'javascripts/embed.js';
+    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(d);
+  })();
+</script>
 <footer class="footer">
-  <span class="footer__copyright">&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}. All rights reserved.</span>
+  <div id='discourse-comments'></div>
+    <span class="footer__copyright">&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}. All rights reserved.</span>  
 </footer>
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript" src="{{ site.url }}/js/main.js?{{site.time | date: '%s%N'}}"></script>
+
+
+
