--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -26,7 +26,7 @@
                   <i class="fa fa-cogs" aria-hidden="true"></i> Usage</a>
               </li>
               <li class="navigation__item">
-                <a href="{{ site.url }}/testing" title="link to {{ site.title }} Deploy" class="blog-button">
+                <a href="{{ site.url }}/test" title="link to {{ site.title }} Deploy" class="blog-button">
                   <i class="fas fa-clipboard-check" aria-hidden="true"></i> Testing</a>
               </li>
               <li class="navigation__item">
