--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -22,6 +22,9 @@
                   <i class="fa fa-info-circle" aria-hidden="true"></i> About</a>
               </li>
               <li class="navigation__item">
+                <a href="{{ site.url}}/style" class="blog-button"><i class="fas fa-book"></i> Documentation</a>
+              </li>
+              <li class="navigation__item">
                 <a href="{{ site.url }}/usage" title="link to {{ site.title }} Test" class="blog-button">
                   <i class="fa fa-cogs" aria-hidden="true"></i> Usage</a>
               </li>
