--- a/docs/_layouts/page.html
+++ b/docs/_layouts/page.html
@@ -2,10 +2,9 @@
 layout: default
 ---
 <article class="post-container post-container--single">
-
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
-    <h2 class="post-intro">{{ page.intro }}</h2>
+    <!-- <h2 class="post-intro">{{ page.intro }}</h2> -->
   </header>
 
   <section class="post">
