Use MIT by default

--- a/egi-galaxy-template/meta/main.yml.j2
+++ b/egi-galaxy-template/meta/main.yml.j2
@@ -8,7 +8,7 @@ galaxy_info:
   # next line and provide a value
   # issue_tracker_url: {{ issue_tracker_url }}
 
-  license: Apache-2.0
+  license: MIT
 
   min_ansible_version: 2.5
 
